Replace collect(Collectors.toList()) with toList() throughout codebase
- Update all stream operations to use Java 16's convenient toList() method
- Remove unnecessary Collectors imports where no longer needed
- Modernize code to use more concise stream termination
- Affects production code in walker, optional, collectors, datetime, and virtualthreads packages
- Update test files to consistently use modern stream syntax

The toList() method produces an unmodifiable list and is more concise than
the verbose collect(Collectors.toList()) pattern. This modernizes the codebase
to showcase current Java best practices.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>